--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			    <div class="navbar-collapse collapse">
 			        <ul class="navbar-nav nav-justified w-100 nav-fill">
 						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="/mac/">Mac</a></li>
-						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#">iphone</a></li>
+						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="./photography.html">photography</a></li>
 						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#">ipad</a></li>
 						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#">watch</a></li>
 						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#">tv</a></li>
