--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 	</section>
 	<!-- Sixth section ends here -->
 
-	<!-- Footer section stats here -->
+	<!-- Footer section starts here -->
 	<footer class="footer-wrapper">
 		<div class="container"> 
 			<div class="upper-text-container">
